# uriviewer

./: CLAUDE.md  Cargo.toml  build.md  build.rs  build_error.txt  build_error_final.txt  build_error_v2.txt  build_log.txt  check_error.txt  check_error_final.txt  check_errors.txt  check_errors_2.txt  test_imports.rs
docs/: .bkit-memory.json  .pdca-status.json
docs/.pdca-snapshots/: snapshot-2026-02-18T06-50-34-560Z.json  snapshot-2026-02-18T06-54-59-329Z.json  snapshot-2026-02-18T06-57-21-658Z.json  snapshot-2026-02-18T06-57-43-820Z.json  snapshot-2026-02-18T06-57-51-615Z.json  snapshot-2026-02-18T06-57-57-613Z.json  snapshot-2026-02-18T06-58-11-828Z.json  snapshot-2026-02-18T06-58-23-481Z.json  snapshot-2026-02-18T06-58-31-483Z.json  snapshot-2026-02-18T06-58-37-401Z.json
docs/01-plan/: glossary.md  market-analysis.md  plan.md  schema.md
docs/02-design/: mockup-spec.md
examples/: ico_gen.rs
mockup/: index.html
mockup/scripts/: app.js
mockup/styles/: main.css
src/: app.rs  capture.rs  hotkeys.rs  lib.rs  loader.rs  main.rs  nav.rs  shell_ext.rs  tray.rs  types.rs  win_utils.rs
