[package]
name = "rustview"
version = "0.1.0"
edition = "2021"
description = "Lightweight multi-format image viewer"

[[bin]]
name = "rustview"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.30"
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "webp", "tiff", "ico",
] }
rfd = { version = "0.14", default-features = false, features = ["xdg-portal"] }
kamadak-exif = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[package.metadata.bundle]
name       = "RustView"
identifier = "com.rustview.app"
icon       = ["assets/icon.png"]
