[package]
name = "rustview"
version = "0.1.0"
edition = "2021"
description = "Lightweight multi-format image viewer"

[[bin]]
name = "rustview"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.30"
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "webp", "tiff", "ico",
] }
rfd = "0.14"
kamadak-exif = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
windows-core = "0.58"
chrono = "0.4"
egui_extras = { version = "0.30", features = ["svg"] }
resvg = "0.42"
usvg = "0.42"
zip = "2.1"
sysinfo = "0.33"
walkdir = "2.5"
arboard = "3.6.1"

[lib]
name = "uriviewer_ext"
crate-type = ["cdylib", "rlib"]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_Security",
    "implement",
]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[package.metadata.bundle]
name       = "RustView"
identifier = "com.rustview.app"
icon       = ["assets/icon.png"]
